Fix z-index on NavBar

--- a/src/components/pages/SinglePost/SinglePost.scss
+++ b/src/components/pages/SinglePost/SinglePost.scss
@@ -6,7 +6,7 @@ $information-phone: "only screen and (min-width : 768px)";
 }
 
 .body-font {
-  font-size: 14px;
+  font-size: 16px;
   // text-align: justify;
 
   img {
